# buying_selling_devops

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Pipfile  README.md  docker-compose.yml  dsc_tiet.enc  dsc_tiet.gpg  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/: config.yml  labeler.yml
backend/buying_selling/: settings.py  urls.py
backend/posts/: apps.py
backend/posts/api/: serializers.py  views.py
backend/users/: apps.py  models.py
buying_selling/: settings.py  urls.py  wsgi.py
buying_selling/config/: settings.py  urls.py  wsgi.py
buying_selling/posts/: admin.py  apps.py  models.py
buying_selling/settings/: base.py  ci.py  dev.py  jwt_settings.py  prod.py
buying_selling/static/: staticfiles.json
buying_selling/users/: admin.py  apps.py  forms.py  models.py  views.py
client-wrapper/: server.js
deploy/: build.sh  build_local.sh
docker/: dev.Dockerfile
docker/client/: Dockerfile.dev  dev.Dockerfile
docker/dev/: Dockerfile  dev.Dockerfile
docker/server/: dev.Dockerfile
playbooks/: deploy.yml
posts/: admin.py  models.py
posts/api/: permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20200430_2033.py  0002_auto_20200501_1842.py  0002_auto_20200504_1948.py  0002_auto_20200508_1437.py  0002_auto_20200509_1532.py  0003_auto_20200504_2224.py  0004_auto_20200505_0007.py  0004_postimages.py  0005_auto_20200513_1947.py
public/: index.html
src/: App.css  App.js  index.css  index.js
src/components/: GoogleLoginButton.js  ImageCarousel.js
src/constants/: index.js
src/pages/: Home.js  Login.js  MyProfile.js  Product.js  Profile.js  Welcome.js  test.js
src/redux/: types.js
src/routes/: Route.js  index.js
src/styles/: Home.module.css  Login.module.css  Product.module.css
users/: admin.py  forms.py  models.py  signals.py  views.py
users/api/: permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200504_2224.py  0002_auto_20200510_0021.py  0002_profile.py  0002_wishlist.py  0003_auto_20200508_2028.py  0004_auto_20200508_2032.py  0004_auto_20200520_1448.py
(+74 files in other folders)
